# PMP-2023

./: pyproject.toml  requirements.txt
Examen/: ex1.py  ex2.py
Lab10/: solution1.py  solution2.py  solution3.py
Lab11/: solution.py
Lab12/: solution.py  solution1.py  solution2.py  solution3.py
Lab13/: solution.py
Lab2/: prob1.py  prob2.py
Lab3/: example.py  solution.py
Lab4/: solution.py
Lab5/: solution.py
Lab6/: README.md  solution.py
Lab7/: solution.py
Lab8/: solution.py
Lab9/: solution.py
Marire/: sol1.py  sol2.py
Partial/: ex1.py  ex2.py
